--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,8 +18,13 @@
 
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link waves-effect" href="{% url 'core:item-detail' %}">Product
+            <li class="nav-item ">
+            <a class="nav-link waves-effect" href=" {% url 'core:home-page' %}">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link waves-effect" href="#">Product
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -47,12 +52,7 @@
               <i class="fab fa-twitter"></i>
             </a>
           </li>
-          <li class="nav-item">
-            <a href="{% static 'https://github.com/mdbootstrap/bootstrap-material-design' %}" class="nav-link border border-light rounded waves-effect"
-              target="_blank">
-              <i class="fab fa-github mr-2"></i>MDB GitHub
-            </a>
-          </li>
+        
         </ul>
 
       </div>
