--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -26,21 +26,23 @@
 
             <div class="mb-3">
               <a href="">
-                <span class="badge purple mr-1">Category 2</span>
-              </a>
-              <a href="">
-                <span class="badge blue mr-1">New</span>
-              </a>
-              <a href="">
-                <span class="badge red mr-1">Bestseller</span>
+                <span class="badge purple mr-1">{{item.get_category_display}}</span>
               </a>
             </div>
 
             <p class="lead">
-              <span class="mr-1">
-                <del>$200</del>
+                  {% if item.discount_price %}
+                  <span class="mr-1">
+                  <del>${{item.price}}</del>
+                  </span>
+                  <span>${{item.discount_price}}</span>
+                  {% else %}
+                  <span>
+                  ${{item.price}}
+                  </span>
+                  {% endif %}
               </span>
-              <span>$100</span>
+              
             </p>
 
             <p class="lead font-weight-bold">Description</p>
