--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Material Design Bootstrap</title>
+         <title>{% block head_title %}{% endblock %}</title>
+        {% block extra_head %}
+        {% endblock %}  
         <!-- Font Awesome -->
         <link rel="stylesheet" href= "{% static 'https://use.fontawesome.com/releases/v5.11.2/css/all.css' %}">
         <!-- Bootstrap core CSS -->
@@ -65,9 +67,27 @@
         new WOW().init();
 
     </script>
+        
+    {% include "navbar.html" %}
+
     <body>
-        {% include "navbar.html" %}
+        <div class = "mt-5 pt-4 ">
+        {% if messages %}
+        {% for message in messages %}
+        <div class= "alert alert-{{message.tags}} alert-dismissible fade show" role = "alert">
+            {{message}}
+            <button type="button" class = "close" data-dismiss= "alert" aria-label= "Close">
+                <span aria-hidden= "true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        </div>
         {% block content %}
+        
         {% endblock content %}
+        {% block extra_body %}
+        {% endblock %}
+        {% include "footer.html" %}
     </body>
 </html>
