--- a/templates/order-summary.html
+++ b/templates/order-summary.html
@@ -72,7 +72,7 @@
                             <td colspan ="6"><b>${{object.get_total_price}}</b></td>
                         </tr>
                         <tr>
-                            <td colspan ="6"class = "btn btn-warning float-right"><a href ="{% url 'check-out' %}"><b>Procced to Checkout</b></h5></td>
+                            <td colspan ="6"class = "btn btn-warning float-right"><a href ="{% url 'core:check-out' %}"><b>Procced to Checkout</b></h5></td>
                             <td colspan ="6"class = "btn btn-default float-right"><a href ="{% url 'core:home-page' %}"><b>Continue shopping</b></h5></td>
                         </tr>
                     </tbody>
